--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -4,8 +4,10 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/workoutText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Workout activity jee"/>
+        android:padding="50dp"
+        android:text="Workout activity jee" />
 
 </LinearLayout>
