--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,4 +15,19 @@
         android:background="@drawable/button_workout"
         android:onClick="workoutButton" />
 
+    <Button
+        android:layout_width="100dp"
+        android:layout_height="70dp"
+        android:onClick="startAlarms"
+        android:text="Start alarms" />
+
+    <Button
+        android:layout_width="100dp"
+        android:layout_height="70dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="116dp"
+        android:onClick="stopAlarms"
+        android:text="Stop alarms" />
+
 </RelativeLayout>
