--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,18 +16,20 @@
         android:onClick="workoutButton" />
 
     <Button
+        android:id="@+id/start"
         android:layout_width="100dp"
         android:layout_height="70dp"
-        android:onClick="startAlarms"
+        android:onClick="manageAlarm"
         android:text="Start alarms" />
 
     <Button
+        android:id="@+id/stop"
         android:layout_width="100dp"
         android:layout_height="70dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="116dp"
-        android:onClick="stopAlarms"
+        android:onClick="manageAlarm"
         android:text="Stop alarms" />
 
 </RelativeLayout>
