--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -11,7 +11,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginLeft="5dp"
         android:background="@drawable/button_back"
-        android:onClick="backToMainActivity" />
+        android:onClick="backButton" />
 
     <TextView
         android:id="@+id/workoutText"
