--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,20 +16,10 @@
         android:onClick="workoutButton" />
 
     <Button
-        android:id="@+id/start"
-        android:layout_width="100dp"
-        android:layout_height="70dp"
-        android:onClick="manageAlarm"
-        android:text="Start alarms" />
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:onClick="settingsButton"
+        android:background="@drawable/button_settings" />
 
-    <Button
-        android:id="@+id/stop"
-        android:layout_width="100dp"
-        android:layout_height="70dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="116dp"
-        android:onClick="manageAlarm"
-        android:text="Stop alarms" />
 
 </RelativeLayout>
