--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -15,6 +15,7 @@
         android:layout_height="45dp"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="5dp"
-        android:background="@drawable/button_back"/>
+        android:background="@drawable/button_back"
+        android:onClick="backButton"/>
 
 </RelativeLayout>
