--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -18,4 +18,26 @@
         android:background="@drawable/button_back"
         android:onClick="backButton"/>
 
+    <Button
+        android:id="@+id/start"
+        android:layout_width="100dp"
+        android:layout_height="70dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="147dp"
+        android:layout_marginTop="103dp"
+        android:onClick="manageAlarm"
+        android:text="Start alarms" />
+
+    <Button
+        android:id="@+id/stop"
+        android:layout_width="100dp"
+        android:layout_height="70dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="147dp"
+        android:layout_marginTop="178dp"
+        android:onClick="manageAlarm"
+        android:text="Stop alarms" />
+
 </RelativeLayout>
