--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -13,84 +13,93 @@
         android:background="@drawable/button_back"
         android:onClick="backButton" />
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:padding="11dp"
-        android:layout_marginTop="5dp"
-        android:id="@+id/workoutBox_top"
-        android:background="@drawable/bg_workoutselect">
-
-        <TextView
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent">
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="10:00"
-            android:textColor="@color/colorPrimary"
-            android:layout_alignParentStart="true"
-            android:textSize="17sp"/>
+            android:orientation="vertical"
+            android:scrollbars="vertical">
+            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:padding="11dp"
+                android:layout_marginTop="5dp"
+                android:id="@+id/workoutBox_top"
+                android:background="@drawable/bg_workoutselect">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:text="5"
-            android:textColor="@color/colorPrimary"
-            android:textSize="17sp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="10:00"
+                    android:textColor="@color/colorPrimary"
+                    android:layout_alignParentStart="true"
+                    android:textSize="17sp"/>
 
-    </RelativeLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:text="5"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="17sp"/>
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:padding="11dp"
-        android:layout_marginTop="5dp"
-        android:id="@+id/workoutBox_middle"
-        android:background="@drawable/bg_workoutselect">
+            </RelativeLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="10:00"
-            android:textColor="@color/colorPrimary"
-            android:layout_alignParentStart="true"
-            android:textSize="17sp"/>
+            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:padding="11dp"
+                android:layout_marginTop="5dp"
+                android:id="@+id/workoutBox_middle"
+                android:background="@drawable/bg_workoutselect">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:text="5"
-            android:textColor="@color/colorPrimary"
-            android:textSize="17sp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="10:00"
+                    android:textColor="@color/colorPrimary"
+                    android:layout_alignParentStart="true"
+                    android:textSize="17sp"/>
 
-    </RelativeLayout>
-    
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:padding="11dp"
-        android:layout_marginTop="5dp"
-        android:id="@+id/workoutBox_bottom"
-        android:background="@drawable/bg_workoutselect">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:text="5"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="17sp"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="10:00"
-            android:textColor="@color/colorPrimary"
-            android:layout_alignParentStart="true"
-            android:textSize="17sp"/>
+            </RelativeLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:text="5"
-            android:textColor="@color/colorPrimary"
-            android:textSize="17sp"/>
+            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:padding="11dp"
+                android:layout_marginTop="5dp"
+                android:id="@+id/workoutBox_bottom"
+                android:background="@drawable/bg_workoutselect">
 
-    </RelativeLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="10:00"
+                    android:textColor="@color/colorPrimary"
+                    android:layout_alignParentStart="true"
+                    android:textSize="17sp"/>
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:text="5"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="17sp"/>
+
+            </RelativeLayout>
+        </LinearLayout>
+    </ScrollView>
     <TextView
         android:id="@+id/workoutText"
         android:layout_width="wrap_content"
