--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -45,6 +45,14 @@
                     android:textColor="@color/colorPrimary"
                     android:textSize="17sp"/>
 
+                <ImageView
+                    android:id="@+id/workoutImg_top"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:layout_centerHorizontal="true"
+                    android:src="@drawable/button_settings" />
+
             </RelativeLayout>
 
             <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -71,6 +79,14 @@
                     android:textColor="@color/colorPrimary"
                     android:textSize="17sp"/>
 
+                <ImageView
+                    android:id="@+id/workoutImg_middle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:layout_centerHorizontal="true"
+                    android:src="@drawable/button_settings" />
+
             </RelativeLayout>
 
             <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -96,6 +112,14 @@
                     android:text="5"
                     android:textColor="@color/colorPrimary"
                     android:textSize="17sp"/>
+
+                <ImageView
+                    android:id="@+id/workoutImg_bottom"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:layout_centerHorizontal="true"
+                    android:src="@drawable/button_settings" />
 
             </RelativeLayout>
         </LinearLayout>
