activity_workout.xml: Replace placeholder graphic with real one.

--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -45,7 +45,7 @@
                     android:layout_marginTop="4dp"
                     android:layout_marginEnd="7dp"
                     android:layout_toStartOf="@+id/topCurrency"
-                    android:src="@drawable/button_settings" />
+                    android:src="@drawable/currency" />
 
                 <TextView
                     android:id="@+id/topCurrency"
@@ -90,7 +90,7 @@
                     android:layout_marginTop="4dp"
                     android:layout_marginEnd="7dp"
                     android:layout_toStartOf="@+id/middleCurrency"
-                    android:src="@drawable/button_settings" />
+                    android:src="@drawable/currency" />
 
                 <TextView
                     android:id="@+id/middleCurrency"
@@ -135,7 +135,7 @@
                     android:layout_marginTop="4dp"
                     android:layout_marginEnd="7dp"
                     android:layout_toStartOf="@+id/bottomCurrency"
-                    android:src="@drawable/button_settings" />
+                    android:src="@drawable/currency" />
 
                 <TextView
                     android:id="@+id/bottomCurrency"
