--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,5 +21,17 @@
         android:onClick="settingsButton"
         android:background="@drawable/button_settings" />
 
+    <TextView
+        android:id="@+id/hoccutext"
+        android:layout_width="306dp"
+        android:layout_height="77dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="25dp"
+        android:layout_marginBottom="43dp"
+        android:text="Sample text"
+        android:textColor="@android:color/black"
+        android:gravity="center|top"/>
+
 
 </RelativeLayout>
