--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,27 @@
         android:background="@drawable/button_workout"
         android:onClick="workoutButton" />
 
+    <ImageView
+        android:id="@+id/bottomCurrencyImg"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="92dp"
+        android:layout_marginTop="14dp"
+        android:src="@drawable/currency" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/bottomCurrencyImg"
+        android:layout_marginStart="3dp"
+        android:layout_marginBottom="-4dp"
+        android:layout_toEndOf="@+id/bottomCurrencyImg"
+        android:text="0"
+        android:textColor="@android:color/white"
+        android:textSize="20dp" />
+
     <Button
         android:layout_width="65dp"
         android:layout_height="65dp"
