activity_settings.xml: Add text and delete unused layout.

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -10,8 +10,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="43dp"
-        android:text="Settings" />
+        android:layout_marginTop="197dp"
+        android:background="#888888"
+        android:text="Alarms are set to come every ~20min." />
 
     <Button
         android:layout_width="45dp"
@@ -42,51 +43,6 @@
         android:layout_marginTop="108dp"
         android:onClick="manageAlarm"
         android:text="Stop alarms" />
-
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/workoutBox_bottom"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginTop="250dp"
-        android:background="@drawable/bg_workoutselect"
-        android:padding="11dp">
-
-        <TextView
-            android:id="@+id/bottomTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:text="10:00"
-            android:textColor="@color/colorPrimary"
-            android:textSize="17sp" />
-
-        <ImageView
-            android:id="@+id/bottomCurrencyImg"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="7dp"
-            android:layout_toStartOf="@+id/bottomCurrency"
-            android:src="@drawable/currency" />
-
-        <TextView
-            android:id="@+id/bottomCurrency"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:text="5"
-            android:textColor="@color/colorPrimary"
-            android:textSize="17sp" />
-
-        <ImageView
-            android:id="@+id/bottomWorkoutImg"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="4dp"
-            android:src="@drawable/button_settings" />
-
-    </RelativeLayout>
 
 
 </RelativeLayout>
