--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -33,7 +33,8 @@
                     android:id="@+id/topTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="10:00"
+                    android:layout_marginStart="25dp"
+                    android:text="x10"
                     android:textColor="@color/colorPrimary"
                     android:layout_alignParentStart="true"
                     android:textSize="17sp"/>
@@ -62,7 +63,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:layout_centerHorizontal="true"
-                    android:src="@drawable/button_settings" />
+                    android:src="@drawable/jumpingjacks" />
 
             </RelativeLayout>
 
@@ -78,7 +79,8 @@
                     android:id="@+id/middleTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="10:00"
+                    android:layout_marginStart="25dp"
+                    android:text="x10"
                     android:textColor="@color/colorPrimary"
                     android:layout_alignParentStart="true"
                     android:textSize="17sp"/>
@@ -107,7 +109,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:layout_centerHorizontal="true"
-                    android:src="@drawable/button_settings" />
+                    android:src="@drawable/kneetoelbow" />
 
             </RelativeLayout>
 
@@ -123,10 +125,11 @@
                     android:id="@+id/bottomTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="10:00"
+                    android:layout_alignTop="@+id/bottomCurrency"
+                    android:layout_marginStart="25dp"
+                    android:text="x10"
                     android:textColor="@color/colorPrimary"
-                    android:layout_alignParentStart="true"
-                    android:textSize="17sp"/>
+                    android:textSize="17sp" />
 
                 <ImageView
                     android:id="@+id/bottomCurrencyImg"
@@ -152,7 +155,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:layout_centerHorizontal="true"
-                    android:src="@drawable/button_settings" />
+                    android:src="@drawable/squats" />
 
             </RelativeLayout>
         </LinearLayout>
