--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:background="@drawable/bg_main"
     tools:context=".MainActivity">
 
+
     <Button
         android:layout_width="65dp"
         android:layout_height="65dp"
@@ -42,6 +43,26 @@
         android:layout_height="65dp"
         android:onClick="settingsButton"
         android:background="@drawable/button_settings" />
+
+    <ImageView
+        android:id="@+id/letterImg"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/letter"
+        android:visibility="invisible" />
+
+    <Button
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="83dp"
+        android:background="@drawable/button_letter"
+        android:onClick="letterButton" />
 
     <TextView
         android:id="@+id/hoccutext"
