--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -33,8 +33,8 @@
                     android:id="@+id/topTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="25dp"
-                    android:text="x10"
+                    android:layout_marginStart="1dp"
+                    android:text="Do x10"
                     android:textColor="@color/colorPrimary"
                     android:layout_alignParentStart="true"
                     android:textSize="17sp"/>
@@ -79,8 +79,8 @@
                     android:id="@+id/middleTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="25dp"
-                    android:text="x10"
+                    android:layout_marginStart="1dp"
+                    android:text="Do x10"
                     android:textColor="@color/colorPrimary"
                     android:layout_alignParentStart="true"
                     android:textSize="17sp"/>
@@ -126,8 +126,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignTop="@+id/bottomCurrency"
-                    android:layout_marginStart="25dp"
-                    android:text="x10"
+                    android:layout_marginStart="1dp"
+                    android:text="Do x10"
                     android:textColor="@color/colorPrimary"
                     android:textSize="17sp" />
 
@@ -160,10 +160,5 @@
             </RelativeLayout>
         </LinearLayout>
     </ScrollView>
-    <TextView
-        android:id="@+id/workoutText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Workout activity jee" />
 
 </LinearLayout>
